# protei-course-task

./: .gitignore  CMakeLists.txt  Makefile  README.md  cdr.txt  conanfile.txt  config.json  main.cpp
include/: CDRWriter.h  CDRWriterImpl.h  CallHttpController.h  CallInfo.h  CallQueue.h  CallService.h  CallServiceImpl.h  Config.h  FileException.h  HttpController.h  JsonReader.h  JsonReaderImpl.h  NoSuchFileException.h  Operator.h  PhoneHttpController.h  config.h
src/: CDRWriterImpl.cpp  CallHttpController.cpp  CallQueue.cpp  CallServiceImpl.cpp  Config.cpp  JsonReaderImpl.cpp  NoSuchFileException.cpp  Operator.cpp  PhoneHttpController.cpp  config.cpp
tests/: AllTests.cpp  ConfigTests.h  JsonReaderTests.h  QueueTests.h
tests/files/: invalid_config.json  update_config_valid.json  update_config_without_cdr.json  valid_config.json
